--- a/index.html
+++ b/index.html
@@ -4,41 +4,67 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Forofolio Fraya</title>
+    <title>Portofolio Fraya</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
   </head>
   <body>
     <header>
       <div class="container">
+        <img src="assets/hii.png" align="right" width="25%" />
         <h1><a href="">HELLO !</a></h1>
+
         <ul>
           <li><a href="">ABOUT</a></li>
-          <li><a href="">SKILL</a></li>
-          <li><a href="">FORTOFOLIO</a></li>
+          <li><a href="">PROFILE</a></li>
           <li><a href="">CONTACT</a></li>
         </ul>
       </div>
     </header>
     <section class="banner">
-      <img src="" />
       <h2>Hai...<br /></h2>
-      <p>Welcome to My Fortofolio</p>
+      <p>Welcome to My Portofolio</p>
     </section>
 
-    <section id="About">
+    <section id="about">
       <div class="container">
         <h3>ABOUT ME</h3>
-        <p>
-          My name is Fraya Fitrajannah and I'm highly motivated Full Stack
-          Developer. This is my awesome portfolio. Hope you enjoy it
-        </p>
+        <p>My name is Fraya Fitrajannah and I'm......Full Stack Developer.</p>
+        <p>This is my awesome portofolio. Hope you enjoy it</p>
       </div>
     </section>
 
-    <section id="Skill">
+    <section id="profile">
       <div class="container">
-        <h3>SKILL</h3>
-        <p>GADA</p>
+        <img id="image" src="assets/profill.png" align="left" />
+        <div id="subprofil">
+          <h3>PROFILE</h3>
+          <p>Name : Fraya Fitrajannah</p>
+          <p></p>
+          <p>Age : 21 years</p>
+          <p></p>
+          <p>Location : Depok City</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="portofolio">
+      <div class="container">
+        <h3></h3>
+        <img src="assets/laptop.jpeg" width="100%" height="25%" />
+      </div>
+    </section>
+    <section id="contact">
+      <div class="container">
+        <h3>CONTACT ME</h3>
+        <p>Get In Touch</p>
+        <div id="phone">
+          <span class="material-symbols-outlined"> call </span>
+          <p>(+62) 8xxx xxx || fraya@....com</p>
+        </div>
       </div>
     </section>
   </body>
